--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,43 @@
 
 body{
     font-family: "Open Sans", sans-serif;
-  
 }
 
 
 .nav{
     display: flex;
     justify-content:space-between;
+    align-items: center;
+}
+
+.nav-title{
+    font-size: 45px;
+    font-weight: 800;
+}
+.nav-letter{
+    color: #FD6E0A;
+}
+.menu{
+    list-style: none;
+    display: flex;
+    gap: 49px;
+    align-items: center;
+    
+}
+
+.menu>li>a{
+    text-decoration: none;
+    color: #474747;
+    font-size: 20px;
+}
+
+.menu>li>button{
+    background-color: #FD6E0A;
+    width: 150px;
+    height: 64px;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    font-size: 20px;
+    font-weight: 700;
 }
